update button hover

--- a/scss/_dashboard.scss
+++ b/scss/_dashboard.scss
@@ -37,6 +37,7 @@
 		button:hover{
 			background-color: $almostWhite;
 			color: $almostBlack;
+			cursor: pointer;
 		}
 		.clients {
 			display: flex;
