--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -9,8 +9,7 @@ nav {
 	box-sizing: border-box;
 	color: $mediumGray;
 	transition: color ease 0.3s;
-	
-	
+
 	.signup {
 		margin-left: auto;
 		margin-right: 2%;
@@ -45,56 +44,63 @@ nav > p:hover,
 	color: $almostBlack;
 	cursor: pointer;
 }
-.logo{
+.logo {
 	position: absolute;
 	padding: 2%;
 }
-// @media screen and(min-width:426px) {
-	.dropdown {
-		position: relative;
 
-		.dropdown-content-features,
-		.dropdown-content-company {
-			display: none;
-			flex-direction: column;
-			position: absolute;
-			z-index: 1;
-			transform: translate(0, 10%);
-			padding: 25%;
-			background-color: white;
-			border-radius: 10px;
-			box-shadow: 2px 2px 10px gray;
-		}
-		
-		.dropdown-content-features span,
-		.dropdown-content-company span {
-			padding: 5% 0;
-			width: 100%;
-			white-space: nowrap;
-			// line-height: 1.7em;
-			display: flex;
-			height: 100%;
-			flex-direction: row;
-			> p {
-				margin: 0;
-				margin-left: 1vw;
-			}
-			> img {
-				width: 1vw;
-				height: 100%;
-			}
-		}
-		.dropdown-content-features span:hover,
-		.dropdown-content-company span:hover {
-			color: $almostBlack;
-			cursor: pointer;
-		}
-		.dropdown-content-features {
-			transform: translate(-50%, 10%);
-		}
-		
+.dropdown {
+	position: relative;
+
+	.dropdown-content-features,
+	.dropdown-content-company {
+		display: none;
+		flex-direction: column;
+		position: absolute;
+		z-index: 1;
+		transform: translate(0, 10%);
+		padding: 25%;
+		background-color: white;
+		border-radius: 10px;
+		box-shadow: 2px 2px 10px gray;
 	}
-	.dropdown:hover .dropdown-content-features, .dropdown:hover .dropdown-content-company {
+
+	.dropdown-content-features ul li a,
+	.dropdown-content-company ul li a {
+		color: $mediumGray;
+
+		text-decoration: none;
+		padding: 5% 0;
+		width: 100%;
+		white-space: nowrap;
+		// line-height: 1.7em;
 		display: flex;
+		height: 100%;
+		flex-direction: row;
+		> p {
+			margin: 0;
+			margin-left: 1vw;
+		}
+		> img {
+			width: 1vw;
+			height: 100%;
+		}
 	}
+	.dropdown-content-features ul,
+	.dropdown-content-company ul {
+		list-style-type: none;
+		padding: 0;
+		display: inline-block;
+	}
+	.dropdown-content-features, .dropdown-content-company {
+		ul li a:hover {
+			color: $almostBlack
+		}
+	}
+	.dropdown-content-features {
+		transform: translate(-50%, 10%);
+	}
+}
+// .dropdown:hover .dropdown-content-features, .dropdown:hover .dropdown-content-company {
+// 	display: flex;
 // }
