--- a/scss/main.css
+++ b/scss/main.css
@@ -105,8 +105,10 @@ nav > p:hover,
           box-shadow: 2px 2px 10px gray;
 }
 
-.dropdown .dropdown-content-features span,
-.dropdown .dropdown-content-company span {
+.dropdown .dropdown-content-features ul li a,
+.dropdown .dropdown-content-company ul li a {
+  color: dimgray;
+  text-decoration: none;
   padding: 5% 0;
   width: 100%;
   white-space: nowrap;
@@ -120,33 +122,32 @@ nav > p:hover,
           flex-direction: row;
 }
 
-.dropdown .dropdown-content-features span > p,
-.dropdown .dropdown-content-company span > p {
+.dropdown .dropdown-content-features ul li a > p,
+.dropdown .dropdown-content-company ul li a > p {
   margin: 0;
   margin-left: 1vw;
 }
 
-.dropdown .dropdown-content-features span > img,
-.dropdown .dropdown-content-company span > img {
+.dropdown .dropdown-content-features ul li a > img,
+.dropdown .dropdown-content-company ul li a > img {
   width: 1vw;
   height: 100%;
 }
 
-.dropdown .dropdown-content-features span:hover,
-.dropdown .dropdown-content-company span:hover {
+.dropdown .dropdown-content-features ul,
+.dropdown .dropdown-content-company ul {
+  list-style-type: none;
+  padding: 0;
+  display: inline-block;
+}
+
+.dropdown .dropdown-content-features ul li a:hover, .dropdown .dropdown-content-company ul li a:hover {
   color: #141414;
-  cursor: pointer;
 }
 
 .dropdown .dropdown-content-features {
   -webkit-transform: translate(-50%, 10%);
           transform: translate(-50%, 10%);
-}
-
-.dropdown:hover .dropdown-content-features, .dropdown:hover .dropdown-content-company {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .wrapper {
@@ -213,6 +214,7 @@ nav > p:hover,
 .wrapper .container button:hover {
   background-color: #fafafa;
   color: #141414;
+  cursor: pointer;
 }
 
 .wrapper .container .clients {
