--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -91,8 +91,10 @@
 				position: relative;
 				transform: translate(0);
 				box-shadow: none;
-				img {
-					width: auto;
+				padding: 1%;
+				ul li a img{
+					width: 3vw;
+					line-height: 1.7em;
 				}
 			}
 		}
